--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS"/>
     
     <application
-        android:label="parkinson_new"
+        android:label="Kineo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
