--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
     <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS"/>
     <!-- 震动权限 -->
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <!-- 相机权限（用于头像拍照） -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <!-- 存储权限（用于选择头像图片） -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
     
     <application
         android:label="Kineo"
