--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,14 @@ dependencies:
   firebase_auth: ^5.3.4
   google_sign_in: ^6.2.2
   cloud_firestore: ^5.6.0  # 云端数据存储
+  firebase_storage: ^12.3.4  # Firebase 存储（用于头像上传）
 
   # 传感器相关
   sensors_plus: ^4.0.0  # 加速度计、陀螺仪
   permission_handler: ^11.0.0  # 权限管理
+  
+  # 图片选择
+  image_picker: ^1.1.2  # 图片选择器（用于选择头像）
 
   # 数据存储
   shared_preferences: ^2.2.0  # 本地轻量存储
@@ -81,6 +85,17 @@ dev_dependencies:
 
   # 应用图标生成器
   flutter_launcher_icons: ^0.14.3
+  
+  # 启动画面生成器
+  flutter_native_splash: ^2.4.4
+
+# 启动画面配置
+flutter_native_splash:
+  color: "#F0F9FF"
+  color_dark: "#1a1a2e"
+  android_12:
+    color: "#F0F9FF"
+    color_dark: "#1a1a2e"
 
 # 应用图标配置
 flutter_launcher_icons:
@@ -107,6 +122,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icon/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
