Feat: add voice training module with real-time decibel feedback
Implemented a voice rehabilitation feature aimed at treating hypophonia in Parkinson's patients.
-Integrated microphone permission handling.
-Added real-time audio stream analysis to calculate decibel levels.
-Created a visual feedback UI where a circle expands based on voice volume.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <!-- 存储权限（用于选择头像图片） -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32"/>
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+    <!-- 麦克风权限（用于语音训练） -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     
     <application
         android:label="Kineo"
