--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,13 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
+
+# 启用 Gradle 守护进程和并行构建
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+
+# 启用构建缓存
+org.gradle.caching=true
+
+# 启用文件系统监听（仅限 Gradle 6.0+）
+org.gradle.vfs.watch=true
