--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   # 图片选择
   image_picker: ^1.1.2  # 图片选择器（用于选择头像）
 
+  # 摄像头和姿态检测
+  camera: ^0.11.0+2  # 摄像头访问
+  google_mlkit_pose_detection: ^0.11.0  # Google ML Kit 姿态检测
+
   # 数据存储
   shared_preferences: ^2.2.0  # 本地轻量存储
   sqflite: ^2.3.0  # SQLite数据库（用于训练记录）
